--- a/SheetDice/Views/CharacterSelection.xaml
+++ b/SheetDice/Views/CharacterSelection.xaml
@@ -18,6 +18,10 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add" Command="{Binding AddCommand}"/>
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
         <ListView ItemsSource="{Binding Characters}" 
                   HasUnevenRows="True" 
@@ -41,7 +45,11 @@
                             <MenuItem Text="Favorite" 
                                       Command="{Binding Source={x:Reference CharacterSelectionPage},Path=BindingContext.FavoriteCommand}"
                                       CommandParameter="{Binding .}"/>
-                            <MenuItem Text="Delete" IsDestructive="True"/>
+                            <MenuItem 
+                                        Command="{Binding Source={x:Reference CharacterSelectionPage}, Path=BindingContext.RemoveCommand}"
+                                        CommandParameter="{Binding .}"
+                                        IsDestructive="True"
+                                        Text="Delete"/>
                         </ViewCell.ContextActions>
                         <Grid Padding="10">
                             <Frame CornerRadius="20">
@@ -53,13 +61,6 @@
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
-            <ListView.Footer>
-                <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                    <Button
-                    Command="{Binding LoadMoreCommand}"
-                    Text="Load More" />
-                </StackLayout>
-            </ListView.Footer>
         </ListView>
     </ContentPage.Content>
 </ContentPage>
