--- a/SheetDice/Views/PrincipalePage.xaml
+++ b/SheetDice/Views/PrincipalePage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:viewmodels="clr-namespace:SheetDice.ViewModels" 
              x:DataType="viewmodels:AttackViewModel"
-             xmlns:models="clr-namespace:SheetDice.Models"
+             xmlns:models="clr-namespace:SheetDice.Models" 
+             xmlns:xtc="http://xamarin.com/schemas/2020/toolkit"
              x:Class="SheetDice.Views.Page1"
              x:Name="PrincipalePage">
 
@@ -26,6 +27,15 @@
             </Style>
             <Style x:Key="Azzurrino" TargetType="StackLayout">
                 <Setter Property="BackgroundColor" Value="LightBlue"></Setter>
+            </Style>
+            <Style x:Key="PrincipalButton" TargetType="Button">
+                <Setter Property="Text" Value="+"></Setter>
+                <Setter Property="BackgroundColor" Value="LightBlue"></Setter>
+                <Setter Property="FontSize" Value="Large"></Setter>
+                <Setter Property="HorizontalOptions" Value="Start"></Setter>
+                <Setter Property="WidthRequest" Value="60"></Setter>
+                <Setter Property="HeightRequest" Value="60"></Setter>
+                <Setter Property="CornerRadius" Value="100"></Setter>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -100,7 +110,7 @@
         </StackLayout>
         <StackLayout Grid.Column="2" Grid.Row="4">
             <Label Text="Inspiration" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Button BackgroundColor="LightBlue" CornerRadius="100" HorizontalOptions="Center" Clicked="Ispirazione" Text="X"></Button>
+            <Button Style="{StaticResource PrincipalButton}" Text="X" HorizontalOptions="Center" Clicked="Ispirazione"></Button>
         </StackLayout>
         <StackLayout Grid.Column="0" Grid.Row="5">
             <Label Text="Attacks:" FontSize="Large" VerticalOptions="EndAndExpand"></Label>
@@ -148,7 +158,7 @@
             </ListView>
         </StackLayout>
         <StackLayout Grid.Column="0" Grid.Row="7">
-                <Button BackgroundColor="LightBlue" Text="+" FontSize="Large" CornerRadius="360"></Button>
+                <Button Style="{StaticResource PrincipalButton}"></Button>
         </StackLayout>
     </Grid>
 </ContentPage>
