--- a/SheetDice/Views/InventoryPage.xaml
+++ b/SheetDice/Views/InventoryPage.xaml
@@ -55,9 +55,9 @@
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <Grid RowDefinitions="120, *, Auto">
+        <Grid RowDefinitions="*, Auto">
 
-            <StackLayout Grid.Row="1">
+            <StackLayout Grid.Row="0">
 
                 <Grid ColumnDefinitions="55, *, 85" HeightRequest="30">
                     <Label Grid.Column="0" Text="Equip" VerticalTextAlignment="End" HorizontalTextAlignment="End"/>
@@ -120,11 +120,11 @@
 
                 </ListView>
 
-                <Frame Padding="10">
+                <StackLayout Padding="10">
                     <Grid ColumnDefinitions="*,*">
 
                         <StackLayout Grid.Column="0">
-                            <Label Text="Carrying load"/>
+                            <Label Text="Carrying load" HorizontalTextAlignment="Center"/>
                             <Frame>
                                 <StackLayout Orientation="Horizontal">
                                     <Label Text="{Binding Weight}"/>
@@ -134,7 +134,7 @@
                         </StackLayout>
 
                         <StackLayout Grid.Column="1">
-                            <Label Text="Carrying capacity"/>
+                            <Label Text="Carrying capacity" HorizontalTextAlignment="Center"/>
                             <Frame>
                                 <StackLayout Orientation="Horizontal">
                                     <Label Text="180"/>
@@ -144,12 +144,11 @@
                         </StackLayout>
 
                     </Grid>
-                </Frame>
-
+                </StackLayout>
 
             </StackLayout>
 
-            <Frame Grid.Row="2" Padding="10">
+            <Frame Grid.Row="1" Padding="10">
                 <Button Style="{StaticResource AddItemButton}"
                         Command="{Binding AddItemCommand}"/>
             </Frame>
