Refactoring di ItemCreation

--- a/SheetDice/Views/Inventario/ItemCreationPage.xaml
+++ b/SheetDice/Views/Inventario/ItemCreationPage.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodels="clr-namespace:SheetDice.ViewModels"
-             x:Class="SheetDice.Views.ItemCreationPage"
-             x:DataType="viewmodels:ItemCreationViewModel"
-             x:Name="Item">
-
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:viewmodels="clr-namespace:SheetDice.ViewModels.Inventario"
+             x:Class="SheetDice.Views.Inventario.ItemCreationPage"
+             x:DataType="viewmodels:ItemCreationViewModel">
+    
     <ContentPage.BindingContext>
         <viewmodels:ItemCreationViewModel/>
     </ContentPage.BindingContext>
@@ -21,7 +20,7 @@
                 <Frame BackgroundColor="White" Padding="10">
                     <StackLayout>
                         <Label Text="Name" FontSize="12" TextColor="Black"/>
-                        <Entry Text="{Binding NameEntry}"/>
+                        <Entry Text="{Binding Name}"/>
                     </StackLayout>
                 </Frame>
 
@@ -30,21 +29,21 @@
                     <Frame BackgroundColor="White" Padding="10" Grid.Column="0">
                         <StackLayout>
                             <Label Text="Weight (lb)" FontSize="12" TextColor="Black"/>
-                            <Entry Text="{Binding WeightEntry}"/>
+                            <Entry Text="{Binding Weight}"/>
                         </StackLayout>
                     </Frame>
 
                     <Frame BackgroundColor="White" Padding="10" Grid.Column="1">
                         <StackLayout>
                             <Label Text="Value (gp)" FontSize="12" TextColor="Black"/>
-                            <Entry Text="{Binding ValueEntry}"/>
+                            <Entry Text="{Binding Value}"/>
                         </StackLayout>
                     </Frame>
 
                     <Frame BackgroundColor="White" Padding="10" Grid.Column="2">
                         <StackLayout>
                             <Label Text="Quantity" FontSize="12" TextColor="Black"/>
-                            <Entry Text="{Binding QuantityEntry}"/>
+                            <Entry Text="{Binding Quantity}"/>
                         </StackLayout>
                     </Frame>
 
@@ -60,14 +59,14 @@
                 </Frame>
 
                 <StackLayout Orientation="Horizontal">
-                    <CheckBox IsChecked="{Binding IsMagicalCheck}"/>
+                    <CheckBox IsChecked="{Binding IsMagical}"/>
                     <Label Text="Magical Item" VerticalTextAlignment="Center" TextColor="Black"/>
                 </StackLayout>
 
                 <Frame BackgroundColor="White" Padding="10" Grid.Column="0">
                     <StackLayout>
                         <Label Text="Description" FontSize="12" TextColor="Black"/>
-                        <Editor AutoSize="TextChanges" Text="{Binding DescriptionEditor}"/>
+                        <Editor AutoSize="TextChanges" Text="{Binding Description}"/>
                     </StackLayout>
                 </Frame>
 
@@ -76,5 +75,4 @@
             </StackLayout>
         </Frame>
     </ContentPage.Content>
-    
 </ContentPage>
