--- a/SheetDice/Views/CharacterSelection.xaml
+++ b/SheetDice/Views/CharacterSelection.xaml
@@ -20,6 +20,7 @@
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add" Command="{Binding AddCommand}"/>
+        <ToolbarItem Text="Logout" Clicked="ToolbarItem_Clicked"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
