--- a/SheetDice/Views/Inventario/ItemModifyPage.xaml
+++ b/SheetDice/Views/Inventario/ItemModifyPage.xaml
@@ -20,7 +20,7 @@
                 <Frame BackgroundColor="White" Padding="10">
                     <StackLayout>
                         <Label Text="Name" FontSize="12" TextColor="Black"/>
-                        <Entry Text="{Binding NameEntry}"/>
+                        <Entry Text="{Binding Name}"/>
                     </StackLayout>
                 </Frame>
 
@@ -29,21 +29,21 @@
                     <Frame BackgroundColor="White" Padding="10" Grid.Column="0">
                         <StackLayout>
                             <Label Text="Weight (lb)" FontSize="12" TextColor="Black"/>
-                            <Entry Text="{Binding WeightEntry}"/>
+                            <Entry Text="{Binding Weight}"/>
                         </StackLayout>
                     </Frame>
 
                     <Frame BackgroundColor="White" Padding="10" Grid.Column="1">
                         <StackLayout>
                             <Label Text="Value (gp)" FontSize="12" TextColor="Black"/>
-                            <Entry Text="{Binding ValueEntry}"/>
+                            <Entry Text="{Binding Value}"/>
                         </StackLayout>
                     </Frame>
 
                     <Frame BackgroundColor="White" Padding="10" Grid.Column="2">
                         <StackLayout>
                             <Label Text="Quantity" FontSize="12" TextColor="Black"/>
-                            <Entry Text="{Binding QuantityEntry}"/>
+                            <Entry Text="{Binding Quantity}"/>
                         </StackLayout>
                     </Frame>
 
@@ -59,14 +59,14 @@
                 </Frame>
 
                 <StackLayout Orientation="Horizontal">
-                    <CheckBox IsChecked="{Binding IsMagicalCheck}"/>
+                    <CheckBox IsChecked="{Binding IsMagical}"/>
                     <Label Text="Magical Item" VerticalTextAlignment="Center" TextColor="Black"/>
                 </StackLayout>
 
                 <Frame BackgroundColor="White" Padding="10" Grid.Column="0">
                     <StackLayout>
                         <Label Text="Description" FontSize="12" TextColor="Black"/>
-                        <Editor AutoSize="TextChanges" Text="{Binding DescriptionEditor}"/>
+                        <Editor AutoSize="TextChanges" Text="{Binding Description}"/>
                     </StackLayout>
                 </Frame>
 
