--- a/SheetDice/Views/Principale.xaml
+++ b/SheetDice/Views/Principale.xaml
@@ -7,7 +7,7 @@
              xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              x:Class="SheetDice.Views.Principale"
              x:Name="PrincipalePage">
-
+    
     <ContentPage.BindingContext>
         <viewmodels:AttackViewModel/>
     </ContentPage.BindingContext>
@@ -41,83 +41,82 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="70"></RowDefinition>
-            <RowDefinition Height="70"></RowDefinition>
-            <RowDefinition Height="70"></RowDefinition>
-            <RowDefinition Height="70"></RowDefinition>
-            <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition Height="70"></RowDefinition>
-            <RowDefinition Height="150"></RowDefinition>
+    <ScrollView>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="70"></RowDefinition>
+                <RowDefinition Height="70"></RowDefinition>
+                <RowDefinition Height="70"></RowDefinition>
+                <RowDefinition Height="70"></RowDefinition>
+                <RowDefinition Height="40"></RowDefinition>
+                <RowDefinition Height="70"></RowDefinition>
+                <RowDefinition Height="150"></RowDefinition>
+                <RowDefinition Height="40"></RowDefinition>
+                <RowDefinition Height="70"></RowDefinition>
+                <RowDefinition Height="150"></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition>
-            </ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <StackLayout Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource Azzurrino}">
-            <Label Text="Name:" FontSize="Medium"></Label>
-            <Entry x:Name="Nome">
-            </Entry>
-        </StackLayout>
-        <StackLayout Grid.Row="0" Grid.Column="2" Style="{StaticResource Azzurrino}">
-            <Label Text="LV:" FontSize="Medium"></Label>
-            <Entry x:Name="Livello" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center">
-            </Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="0" Grid.Row="1">
-            <Label Text="HP MAX" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
-            <Entry x:Name="HpMax" Keyboard="Numeric" HorizontalTextAlignment="Center">
-            </Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="1" Grid.Row="1">
-            <Label Text="HP" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
-            <Entry x:Name="Hp" Keyboard="Numeric" HorizontalTextAlignment="Center"></Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="2" Grid.Row="1">
-            <Label Text="HP Temp" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
-            <Entry x:Name="HpTemp" Keyboard="Numeric" HorizontalTextAlignment="Center"></Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="0" Grid.Row="2">
-            <Label Text="HD:" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"></Label>
-        </StackLayout>
-        <StackLayout Grid.Column="1" Grid.Row="2">
-            <Label x:Name="Hd" VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="Large" Text="0"></Label>
-        </StackLayout>
-        <StackLayout Grid.Column="2" Grid.Row="2">
-            <Button Text="+" VerticalOptions="CenterAndExpand" FontSize="Body" HeightRequest="35" Clicked="HdAumento" BackgroundColor="LightBlue"></Button>
-            <Button Text="-" VerticalOptions="CenterAndExpand" FontSize="Body" HeightRequest="35" Clicked="HdMeno" BackgroundColor="LightBlue"></Button>
-        </StackLayout>
-        <StackLayout Grid.Column="0" Grid.Row="3">
-            <Label Text="AC" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Entry x:Name="Ac" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="1" Grid.Row="3">
-            <Label Text="Prof. Bonus" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Entry x:Name="ProfBonus" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="2" Grid.Row="3">
-            <Label Text="Initiative" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Entry x:Name="Initiative" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="0" Grid.Row="4">
-            <Label Text="Speed" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Entry x:Name="Speed" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="1" Grid.Row="4">
-            <Label Text="PP" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Entry x:Name="PassivePerception" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
-        </StackLayout>
-        <StackLayout Grid.Column="2" Grid.Row="4">
-            <Label Text="Inspiration" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
-            <Button Style="{StaticResource PrincipalButton}" Text="X" HorizontalOptions="Center" Clicked="Ispirazione"></Button>
-        </StackLayout>
-        <StackLayout Grid.Column="0" Grid.Row="5">
-            <Label Text="Attacks:" FontSize="Large" VerticalOptions="EndAndExpand"></Label>
-        </StackLayout>
-        <StackLayout Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="3">
-            <ListView SelectedItem="{Binding SelectedAttack, Mode=TwoWay}"
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <StackLayout Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Style="{StaticResource Azzurrino}">
+                <Label Text="Name:" FontSize="Medium"></Label>
+                <Entry x:Name="Nome"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Row="0" Grid.Column="2" Style="{StaticResource Azzurrino}">
+                <Label Text="LV:" FontSize="Medium"></Label>
+                <Entry x:Name="Livello" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="1">
+                <Label Text="HP MAX" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
+                <Entry x:Name="HpMax" Keyboard="Numeric" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="1" Grid.Row="1">
+                <Label Text="HP" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
+                <Entry x:Name="Hp" Keyboard="Numeric" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="2" Grid.Row="1">
+                <Label Text="HP Temp" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Start"></Label>
+                <Entry x:Name="HpTemp" Keyboard="Numeric" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="2">
+                <Label Text="HD:" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="CenterAndExpand"></Label>
+            </StackLayout>
+            <StackLayout Grid.Column="1" Grid.Row="2">
+                <Label x:Name="Hd" VerticalOptions="CenterAndExpand" HorizontalTextAlignment="Center" FontSize="Large" Text="0"></Label>
+            </StackLayout>
+            <StackLayout Grid.Column="2" Grid.Row="2">
+                <Button Text="+" VerticalOptions="CenterAndExpand" FontSize="Body" HeightRequest="35" Clicked="HdAumento" BackgroundColor="LightBlue"></Button>
+                <Button Text="-" VerticalOptions="CenterAndExpand" FontSize="Body" HeightRequest="35" Clicked="HdMeno" BackgroundColor="LightBlue"></Button>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="3">
+                <Label Text="AC" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+                <Entry x:Name="Ac" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="1" Grid.Row="3">
+                <Label Text="Prof. Bonus" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+                <Entry x:Name="ProfBonus" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="2" Grid.Row="3">
+                <Label Text="Initiative" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+                <Entry x:Name="Initiative" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="4">
+                <Label Text="Speed" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+                <Entry x:Name="Speed" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="1" Grid.Row="4">
+                <Label Text="PP" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+                <Entry x:Name="PassivePerception" Keyboard="Numeric" MaxLength="2" HorizontalTextAlignment="Center"></Entry>
+            </StackLayout>
+            <StackLayout Grid.Column="2" Grid.Row="4">
+                <Label Text="Inspiration" FontSize="Medium" VerticalOptions="Start" HorizontalOptions="Center"></Label>
+                <Button Style="{StaticResource PrincipalButton}" Text="X" HorizontalOptions="Center" Clicked="Ispirazione"></Button>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="5">
+                <Label Text="Attacks:" FontSize="Large" VerticalOptions="EndAndExpand"></Label>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="3">
+                <ListView SelectedItem="{Binding SelectedAttack, Mode=TwoWay}"
                       CachingStrategy="RecycleElement"
                       BackgroundColor="Transparent"
                       ItemsSource="{Binding Attacks}"
@@ -126,51 +125,57 @@
                       IsRefreshing="{Binding IsBusy, Mode=OneWay}"
                       RefreshCommand="{Binding RefreshCommand}"
                       RefreshControlColor="DeepSkyBlue">
-                <ListView.Behaviors>
-                    <xct:EventToCommandBehavior
-                    EventName="ItemSelected"
-                    Command="{Binding SelectedCommand}"
+                    <ListView.Behaviors>
+                        <xct:EventToCommandBehavior
+                        EventName="ItemSelected"
+                        Command="{Binding SelectedCommand}"
 
-                    EventArgsConverter="{StaticResource ItemSelectedEventArgsConverter}"/>
-                </ListView.Behaviors>
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="models:Attack">
-                        <ViewCell>
-                            <ViewCell.ContextActions>
-                                <MenuItem Text="Favourite" 
-                                          Command="{Binding Source={x:Reference PrincipalePage}, Path=BindingContext.FavoriteComand}" 
-                                          CommandParameter="{Binding .}"/>
-                                <MenuItem 
-                                        Command="{Binding Source={x:Reference PrincipalePage}, Path=BindingContext.RemoveCommand}"
-                                        CommandParameter="{Binding .}"
-                                        IsDestructive="True"
-                                        Text="Delete"/>
-                            </ViewCell.ContextActions>
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition></RowDefinition>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition></ColumnDefinition>
-                                </Grid.ColumnDefinitions>
-                                <StackLayout  Grid.Column="0">
-                                    <Label VerticalOptions="Center" FontSize="Medium" Text="{Binding Name}"></Label>
-                                </StackLayout>
-                                <StackLayout Grid.Column="2">
-                                    <Label VerticalOptions="Center" HorizontalTextAlignment="Center" FontSize="Medium" Text="{Binding Damage}">
-                                    </Label>
-                                </StackLayout>
-                                <StackLayout Grid.Column="1">
-                                    <Label Grid.Column="1" VerticalOptions="Center" HorizontalTextAlignment="Center" FontSize="Medium" Text="{Binding Type}"></Label>
-                                </StackLayout>
-                            </Grid>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </StackLayout>
-        <StackLayout Grid.Column="0" Grid.Row="7">
-            <Button Style="{StaticResource PrincipalButton}" Command="{Binding AddCommand}"></Button>
-        </StackLayout>
-    </Grid>
+                        EventArgsConverter="{StaticResource ItemSelectedEventArgsConverter}"/>
+                    </ListView.Behaviors>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:Attack">
+                            <ViewCell>
+                                <ViewCell.ContextActions>
+                                    <MenuItem Text="Favourite" 
+                                            Command="{Binding Source={x:Reference PrincipalePage}, Path=BindingContext.FavoriteComand}" 
+                                            CommandParameter="{Binding .}"/>
+                                    <MenuItem 
+                                            Command="{Binding Source={x:Reference PrincipalePage}, Path=BindingContext.RemoveCommand}"
+                                            CommandParameter="{Binding .}"
+                                            IsDestructive="True"
+                                            Text="Delete"/>
+                                </ViewCell.ContextActions>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition></RowDefinition>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <StackLayout  Grid.Column="0">
+                                        <Label VerticalOptions="Center" FontSize="Medium" Text="{Binding Name}"></Label>
+                                    </StackLayout>
+                                    <StackLayout Grid.Column="2">
+                                        <Label VerticalOptions="Center" HorizontalTextAlignment="Center" FontSize="Medium" Text="{Binding Damage}"></Label>
+                                    </StackLayout>
+                                    <StackLayout Grid.Column="1">
+                                        <Label Grid.Column="1" VerticalOptions="Center" HorizontalTextAlignment="Center" FontSize="Medium" Text="{Binding Type}"></Label>
+                                    </StackLayout>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="7">
+                <Button Style="{StaticResource PrincipalButton}" Command="{Binding AddCommand}" VerticalOptions="Center"></Button>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="8">
+                <Label Text="Conditions:" FontSize="Large" VerticalOptions="EndAndExpand"/>
+            </StackLayout>
+            <StackLayout Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="3">
+                <ListView BackgroundColor="Transparent"/>
+            </StackLayout>
+        </Grid>
+    </ScrollView>
 </ContentPage>
